# autogenstudio-skills

./: .cursorignore  pyproject.toml  webpage_content.txt
tool_kit/: plot_diagram.py  test.py  webscrape.py
web_search/: test.py
